Organization and Limit to time Dopamine

--- a/style.css
+++ b/style.css
@@ -6,10 +6,13 @@
 .confetti{
 	position: absolute;
 	top: 95%;
-	border: 1px solid black;
+
 	width: 10px;
 	height: 10px;
-	border-radius: 20px;
+
+	border: 1px solid black;
+	border-radius: 20px;	
+
 	animation-name: ConfettiAnimation;
 	animation-duration: 4s;
 	animation-timing-function: ease-out;
@@ -22,26 +25,9 @@
 	};
 }
 
-.down0{
-	transform: rotate3d(1,1,1,650deg);
-}
-
-.down1{
-	transform: rotate3d(1,1,1, 1060deg);
-}
-
-.down2{
-	transform: rotate3d(1,0,1, 900deg);
-}
-
-.down3{
-	transform: rotate3d(0,1,1, 500deg);
-}
-
-.down4{
-	transform: rotate3d(1,1,0, 700deg);
-}
-
-.down5{
-	transform: rotate3d(1,1,0, 450deg);
-}
+.style0	{ transform: rotate3d(1,1,1, 650deg); background: #e74c3c; }
+.style1 { transform: rotate3d(1,1,1, 999deg); background: #e67e22; }
+.style2 { transform: rotate3d(1,0,1, 900deg); background: #9b59b6; } 
+.style3 { transform: rotate3d(0,1,1, 500deg); background: #3498db; }
+.style4 { transform: rotate3d(1,1,0, 700deg); background: #2ecc71; }
+.style5 { transform: rotate3d(1,1,0, 450deg); background: #ecf0f1; }
